@@ -1,6 +1,8 @@
 from 2.4.19 to 2.4.20
 - fixed display bug in dar_manager met when using -o option and adding
   options for dar that does not exist for dar_manager (like -R option)
+- reactivating disabled (by mistake) optimizations for some read-only dar
+  manager database operations
 
 from 2.4.18 to 2.4.19
 - fixed missing quote in dar_par.dcf which is called by the par2 directive
